fix spacing on flex items when drop to 2 rows

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ body {
 
 .flex-item {
   flex: 1 1 auto;
+  margin-top: 1em;
 }
 
 .flex-item.title {
